--- a/styles/index.css
+++ b/styles/index.css
@@ -37,6 +37,18 @@ a {
   gap : 4px;
 }
 
+.elements-container {
+	overflow: scroll;
+	width: 300px;
+	height: 310px; /* might need fix */
+}
+
+.properties-container {
+	overflow: scroll;
+	width: 300px;
+	height: 310px; /* might need fix */
+}
+
 .menu {
   width: 300px;
 	padding: 16px;
